# CS566SampleCode

./: README
raytrace/: .gitignore  COPYING  Camera.cpp  GFXExtra.h  GFXMath.h  GeometricObject.cpp  GeometricObject.h  Image.h  Light.cpp  Light.h  Makefile  Makefile.am  Material.cpp  Material.h  README  RayFactory.cpp  RayFactory.h  Scene.cpp  Scene.h  ShadingRecord.cpp  ShadingRecord.h  StopWatch.h  ViewPlane.cpp  ViewPlane.h  clean.sh  configure.ac  raytrace.cpp  shader.cpp  shader.h
raytrace/config/: Makefile.darwin  Makefile.linux
raytrace/doc/: Makefile  Makefile.am  Makefile.in  grammar.html  grammar.tex
raytrace/scenes/: README  scene1_01.txt  scene1_02.txt  scene1_03.txt  scene1_04.txt  scene1_05.txt  scene1_06.txt  scene1_07.txt
raytrace/src/: Camera.h  Group.h  Hit.h  Image.cpp  Makefile.am  Makefile.in  Ray.h  Scene.cpp  Scene.h  common.h  getopt.h  getopt_long.cpp
